# NPRG041

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  config.ini
.github/workflows/: main.yml
cmake/: bootstrap.cmake  create_example.cmake  create_test.cmake  doctest.cmake
cmake/templates/: config.h
docs/: devel.md
examples/: CMakeLists.txt
examples/00-debug/: CMakeLists.txt  main.cpp
examples/01-hello_world/: CMakeLists.txt  main.cpp
examples/elements/: CMakeLists.txt
examples/elements/boxes/: main.cpp
examples/elements/button/: main.cpp
examples/elements/canvas/: main.cpp
examples/elements/checkbox/: main.cpp
examples/elements/input/: main.cpp
examples/elements/radiobox/: main.cpp
examples/elements/slider/: main.cpp
examples/elements/text/: main.cpp
examples/elements/toggle/: main.cpp
include/koterm/: BoundingBox.h  Dimensions.h  exceptions.h  unit.h
include/koterm/component/: Alignment.h  Border.h  Signal.h  Text.h  TextDecoration.h
include/koterm/dom/: DomManager.h  Element.h  Text.h
include/koterm/event/: Event.h  EventListener.h  EventSender.h  KeyCodes.h
include/koterm/screen/: BaseScreen.h  BoundingBox.h  Buffer.h  Color.h  ColorCache.h  InteractScreen.h  Pixel.h  Screen.h  Tile.h  ansi.h  colors.h  terminal.h  unit.h
include/koterm/terminal/: BoundingBox.h  Buffer.h  Color.h  Cursor.h  Parser.h  Pixel.h  TerminalGuard.h  Tile.h  ansi.h  colors.h  terminal.h  unit.h
include/koterm/util/: ConstMap.h  FixedStack.h  ascii.h  bits.h  debug.h  discard.h  os.h  range.h  safe_getenv.h  type.h  utf8.h
src/: CMakeLists.txt
src/component/: Border.cpp  CMakeLists.txt  Text.cpp
src/dom/: CMakeLists.txt  DomManager.cpp  Element.cpp  Text.cpp
src/dom/drawing/: Canvas.cpp
src/dom/input/: Button.cpp  Checkbox.cpp  Input.cpp  (+1 more)
src/screen/: Buffer.cpp  CMakeLists.txt  ColorCache.cpp  InteractScreen.cpp  Pixel.cpp  Screen.cpp  terminal.cpp
src/terminal/: Buffer.cpp  CMakeLists.txt  Parser.cpp  Pixel.cpp  terminal.cpp
tests/: CMakeLists.txt  utils.h
(+19 files in other folders)
